plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

// Little change
dependencies {
    implementation 'org.jetbrains:annotations:24.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
    implementation 'org.json:json:20230227'
    // JUnit 5 dependencies
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

// Mockito dependencies
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'



}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
